@@ -99,10 +99,13 @@ extern struct starpu_sched_policy _starpu_sched_modular_random_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_random_prio_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_random_prefetching_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_random_prio_prefetching_policy;
+extern struct starpu_sched_policy _starpu_sched_modular_parallel_random_policy;
+extern struct starpu_sched_policy _starpu_sched_modular_parallel_random_prio_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_ws_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_heft_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_heft_prio_policy;
 extern struct starpu_sched_policy _starpu_sched_modular_heft2_policy;
+extern struct starpu_sched_policy _starpu_sched_modular_parallel_heft_policy;
 extern struct starpu_sched_policy _starpu_sched_graph_test_policy;
 extern struct starpu_sched_policy _starpu_sched_tree_heft_hierarchical_policy;
 
